Massive restructuring of portfolio started to match new design

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,34 +6,34 @@
                 <div class="social-buttons">
                     {% if site.author.email %}
                     <a class="no-decoration" href="mailto:{{ site.author.email }}">
-                        <p class="social">Email</p>
+                        <p class="social smaller">Email</p>
                     </a>
                     {% endif %} {% if site.author.facebook %}
                     <a class="no-decoration" href="http://www.facebook.com/{{ site.author.facebook }}">
-                        <p class="social">Facebook</p>
+                        <p class="social smaller">Facebook</p>
                     </a> {% endif %} {% if site.author.twitter %}
                     <a class="no-decoration" href="http://www.twitter.com/{{ site.author.twitter }}">
-                        <p class="social">Twitter</p>
+                        <p class="social smaller">Twitter</p>
                     </a> {% endif %} {% if site.author.medium %}
                     <a  class="no-decoration"href="http://www.medium.com/@{{ site.author.medium }}">
-                        <p class="social">Medium</p>
+                        <p class="social smaller">Medium</p>
                     </a> {% endif %} {% if site.author.linkedin %}
                     <a class="no-decoration" href="http://www.linkedin.com/{{ site.author.linkedin }}">
-                        <p class="social">Linkedin</p>
+                        <p class="social smaller">Linkedin</p>
                     </a> {% endif %} {% if site.author.tumbler %}
                     <a class="no-decoration" href="https://{{ site.author.tumblr }}.tumblr.com">
-                        <p class="social">Tumblr</p>
+                        <p class="social smaller">Tumblr</p>
                     </a> {% endif %} {% if site.author.github %}
                     <a class="no-decoration" href="http://github.com/{{ site.author.github}}">
-                        <p class="social">Github</p>
+                        <p class="social smaller">Github</p>
                     </a>
                     {% endif %} {% if site.author.dribbble %}
                     <a class="no-decoration" href="https://dribbble.com/{{ site.author.dribbble }}">
-                        <p class="social">Dribbble</p>
+                        <p class="social smaller">Dribbble</p>
                     </a>
                     {% endif %} {% if site.author.behance %}
                     <a class="no-decoration" href="https://www.behance.net/{{ site.author.behance }}">
-                        <p class="social">Behance</p>
+                        <p class="social smaller">Behance</p>
                     </a>
                     {% endif %}
                 </div>
