--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <!--Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600|Merriweather" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600|Merriweather" rel="stylesheet"> -->
     <!--Bootstrap CSS-->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!--Font awesome-->
@@ -14,7 +14,7 @@
     <!--Animated modals-->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
     <!--Custom styling-->
-    <link href="{{ site.baseurl }}/css/style.css" type="text/css" rel="stylesheet" />
+    <link href="{{ site.baseurl }}/sass/style.css" type="text/css" rel="stylesheet" />
 
-    <link rel="icon" type="image/png" href="..\assets\images\ag.ico">
+    <!-- <link rel="icon" type="image/png" href="..\assets\images\ag.ico"> -->
 </head>
