--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,9 +11,10 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                       <li><a href="/" {% if page.url == "/" %}class="active no-decoration"{% endif %}> Home</i></a></li>
-                        <li><a href="/about/" {% if page.url == "/about/" %}class="active no-decoration"{% endif %}>About</a></li>
                         <li><a href="/work/" {% if page.url == "/work/" %}class="active no-decoration"{% endif %}>Work</a></li>
                         <li><a href="/blog/" {% if page.url == "/blog/" %}class="active no-decoration"{% endif %}>Blog</a></li>
+                        <li><a href="/contacts/" {% if page.url == "/contacts/" %}class="active no-decoration"{% endif %}>Contacts</a></li>
+
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
