--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,8 @@
---- 
+---
 layout: default
 ---
 
-<div class="container">
-    <div class="row text-center">
-        <div class="col-xs-12 section-title">
-            <h1>{{ page.title }}</h1>
-        </div>
-    </div>
-</div>
-
-{{ content }} 
+<section class="container">
+        <div class="col-md-5"><h1 class="accent">{{page.title}}</h1></div>
+        <div class="col-md-7">{{ content }}</div>
+</section>
