--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <section class="container">
-        <div class="col-md-5"><h1 class="accent">{{page.title}}</h1></div>
-        <div class="col-md-7">{{ content }}</div>
+        <div class="col-md-5 text-center"><h1 class="accent">{{page.title}}</h1></div>
+        <div class="col-md-7 col-sm-12">{{ content }}</div>
 </section>
