--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
                     <a  class="no-decoration"href="http://www.medium.com/@{{ site.author.medium }}">
                         <p class="social smaller">Medium</p>
                     </a> {% endif %} {% if site.author.linkedin %}
-                    <a class="no-decoration" href="http://www.linkedin.com/{{ site.author.linkedin }}">
+                    <a class="no-decoration" href="http://www.linkedin.com/in/{{ site.author.linkedin }}">
                         <p class="social smaller">Linkedin</p>
                     </a> {% endif %} {% if site.author.tumbler %}
                     <a class="no-decoration" href="https://{{ site.author.tumblr }}.tumblr.com">
