--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -21,12 +21,16 @@ body {
 section{
   width: 100%;
   min-height: 80%;
-}
-.container{
   margin: 0 10px;
-  min-height: 100%;
 }
-
+.main{
+  min-height: 70%;
+  @media only screen and (min-width: $breakpoint-large){
+    .main{
+      padding: 100px 0;
+    }
+  }
+}
 
 .footer {
     width: 100%;
