Added accent class

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -28,6 +28,9 @@ h3 {font-size: 1.563em;}
 
 h4 {font-size: 1.25em;}
 
+.accent{
+  color: $accent;
+}
 .larger-heading{
   font-size: 3.157em;
   margin-top: 0;
