--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,38 +2,38 @@
     <div class="container-fluid footer">
         <div class="row">
             <div class="col-xs-12">
-                <p>Alessandra Gherardelli © 2016</p>
+                <p>Alessandra Gherardelli © 2017</p>
                 <div class="social-buttons">
                     {% if site.author.email %}
                     <a class="no-decoration" href="mailto:{{ site.author.email }}">
-                        <p class="social smaller">Email</p>
+                        <p class="social smaller">Email&nbsp;</p>
                     </a>
                     {% endif %} {% if site.author.facebook %}
                     <a class="no-decoration" href="http://www.facebook.com/{{ site.author.facebook }}">
-                        <p class="social smaller">Facebook</p>
+                        <p class="social smaller">Facebook&nbsp;</p>
                     </a> {% endif %} {% if site.author.twitter %}
                     <a class="no-decoration" href="http://www.twitter.com/{{ site.author.twitter }}">
-                        <p class="social smaller">Twitter</p>
+                        <p class="social smaller">Twitter&nbsp;</p>
                     </a> {% endif %} {% if site.author.medium %}
                     <a  class="no-decoration"href="http://www.medium.com/@{{ site.author.medium }}">
-                        <p class="social smaller">Medium</p>
+                        <p class="social smaller">Medium&nbsp;</p>
                     </a> {% endif %} {% if site.author.linkedin %}
                     <a class="no-decoration" href="http://www.linkedin.com/in/{{ site.author.linkedin }}">
-                        <p class="social smaller">Linkedin</p>
+                        <p class="social smaller">Linkedin&nbsp;</p>
                     </a> {% endif %} {% if site.author.tumbler %}
                     <a class="no-decoration" href="https://{{ site.author.tumblr }}.tumblr.com">
-                        <p class="social smaller">Tumblr</p>
+                        <p class="social smaller">Tumblr&nbsp;</p>
                     </a> {% endif %} {% if site.author.github %}
                     <a class="no-decoration" href="http://github.com/{{ site.author.github}}">
-                        <p class="social smaller">Github</p>
+                        <p class="social smaller">Github&nbsp;</p>
                     </a>
                     {% endif %} {% if site.author.dribbble %}
                     <a class="no-decoration" href="https://dribbble.com/{{ site.author.dribbble }}">
-                        <p class="social smaller">Dribbble</p>
+                        <p class="social smaller">Dribbble&nbsp;</p>
                     </a>
                     {% endif %} {% if site.author.behance %}
                     <a class="no-decoration" href="https://www.behance.net/{{ site.author.behance }}">
-                        <p class="social smaller">Behance</p>
+                        <p class="social smaller">Behance&nbsp;</p>
                     </a>
                     {% endif %}
                 </div>
