--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,13 +2,20 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header"> <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <div class="navbar-header"> 
+                                <a class="navbar-brand" href="/">
+                <img alt="AG" src="../assets/icons/AG.png">
+                </a>
+                
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <i class="fa fa-bars" aria-hidden="true"></i>
 
           </button>  </div>
+ 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
                     <ul class="nav navbar-nav navbar-right">
                       <li><a href="/" {% if page.url == "/" %}class="active no-decoration"{% endif %}> Home</i></a></li>
                         <li><a href="/work/" {% if page.url == "/work/" %}class="active no-decoration"{% endif %}>Work</a></li>
