--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -14,6 +14,9 @@
 .navbar-default .navbar-nav>li>a.active{
     color: $accent;
 }
+.navbar-collapse {
+    border-top: none;
+}
 
 .navbar-toggle {
   border: 0px;
