--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -2,6 +2,10 @@
     #cv-big{
         display: none;
     }
+    .center{
+        display: flex;
+        justify-content: center;
+    }
 }
 @media screen and (min-width: 992px){
     #cv-small{
