--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,6 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
     <!--Custom styling-->
     <link href="{{ site.baseurl }}/sass/style.css" type="text/css" rel="stylesheet" />
-
+    <link rel="shortcut icon" href="{{ site.baseurl }}/assets/icons/AG.ico" type="image/x-icon" />
     <!-- <link rel="icon" type="image/png" href="..\assets\images\ag.ico"> -->
 </head>
