--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header"> 
                                 <a class="navbar-brand" href="/">
-                <img alt="AG" src="../assets/icons/AG.png">
+                <img alt="AG" src="{{ site.baseurl }}/assets/icons/AG.png">
                 </a>
                 
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
