--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -26,9 +26,10 @@ h4 {font-size: 1.25em;}
 
 p {margin-bottom: 1.3em;}
 
-a:hover{
+a:hover, a:active, a:focus{
   text-decoration: none;
-  font-style: italic;
+  font-weight: 400;
+  color: $primary;
 }
 
 code {
