Added Google Analytics tracking code

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,3 +4,7 @@
         {{ content }}
 
 {% include footer.html %}
+
+{% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+{% endif %}
