Added 404 custom page

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -24,6 +24,10 @@
 .fa-bars{
   color: $accent;
 }
+.fa-chevron-left, .fa-chevron-right{
+  color: $primary;
+  
+}
 // BUTTONS
 .btn {
     // margin: 0px 40px;
