--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,11 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
+
+    
+    <!--{% if page.url == "/404.html" %}-->
+    <!--<meta http-equiv="refresh" content="5; url=/">-->
+    <!--{% endif %}-->
     <title>{{ page.title }}</title>
     <!--Google fonts-->
     <!-- <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600|Merriweather" rel="stylesheet"> -->
