--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -25,6 +25,9 @@ section{
 }
 .main{
   min-height: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   @media only screen and (min-width: $breakpoint-large){
     .main{
       padding: 100px 0;
