Added few items to portfolio + fixed blog posts;

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -38,6 +38,9 @@ section{
     display: flex;
     justify-content: center;
 }
+.blog-title{
+  margin-bottom: 10px;
+}
 .paginator{
   margin: 15% auto;
 }
