--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -55,8 +55,9 @@ blockquote {
 .lighter-heading{
   color: $light-grey;
   font-weight: 300;
-  margin: 0;
+  margin: -10px 0;
 }
+
 #contact{
   font-weight: 600;
 }
