--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,6 @@
 
 {% include footer.html %}
 
-{% if jekyll.environment == 'production' %}
+<!--{% if jekyll.environment == 'production' %}-->
     {% include analytics.html %}
-{% endif %}
+<!--{% endif %}-->
