--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,4 +22,15 @@
     <link href="{{ site.baseurl }}/sass/style.css" type="text/css" rel="stylesheet" />
     <link rel="shortcut icon" href="{{ site.baseurl }}/assets/icons/AG.ico" type="image/x-icon" />
     <!-- <link rel="icon" type="image/png" href="..\assets\images\ag.ico"> -->
+    
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-102975565-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
