--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,13 +2,15 @@
 <html lang="en">
 
 <head>
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-N2WJP35');</script>
+<!-- End Google Tag Manager -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-
-    
-    <!--{% if page.url == "/404.html" %}-->
-    <!--<meta http-equiv="refresh" content="5; url=/">-->
-    <!--{% endif %}-->
+  <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <!--Google fonts-->
     <!-- <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600|Merriweather" rel="stylesheet"> -->
@@ -22,15 +24,4 @@
     <link href="{{ site.baseurl }}/sass/style.css" type="text/css" rel="stylesheet" />
     <link rel="shortcut icon" href="{{ site.baseurl }}/assets/icons/AG.ico" type="image/x-icon" />
     <!-- <link rel="icon" type="image/png" href="..\assets\images\ag.ico"> -->
-    
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-102975565-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 </head>
