Resume updates on personal website

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,7 +20,8 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/" {% if page.url=="/" %}class="active no-decoration" {% endif %}> Home</i></a></li>
                     <li><a href="/work/" {% if page.url=="/work/" %}class="active no-decoration" {% endif %}>Work</a></li>
-                    <!-- <li><a href="/blog/" {% if page.url == "/blog/" %}class="active no-decoration"{% endif %}>Blog</a></li> -->
+                    <li><a href="/projects/" {% if page.url=="/projects/" %}class="active no-decoration" {% endif %}>Projects</a></li>
+                    <li><a href="/blog/" {% if page.url == "/blog/" %}class="active no-decoration"{% endif %}>Blog</a></li>
                     <li><a href="/contacts/" {% if page.url=="/contacts/" %}class="active no-decoration" {% endif %}>Contacts</a></li>
 
                 </ul>
