--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -1,5 +1,8 @@
 // Variables
 $font-family: 'Roboto Slab', serif;
+$header-font-family: 'Roboto', sans-serif;
+$code-font-family: 'Roboto Mono', monospace;
+
 $font-weight-light: 300;
 $font-weight-regular: 400;
 $font-weight-heavy: 700;
