--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,9 +1,14 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab:300,400");
+@import url("@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto+Slab:wght@300&family=Roboto:wght@700&display=swap');");
+
+*{
+  font-family: $font-family;
+}
 
 h1,
 h2,
 h3,
 h4 {
+    font-family: $header-font-family;
     font-weight: 700;
     line-height: 1.2;
     margin: 1.2em 0 0.5em;
@@ -33,7 +38,7 @@ a:hover, a:active, a:focus{
 }
 
 code {
-    font-family: "Roboto Mono", monospace;
+    font-family: $code-font-family;
     margin-bottom: 1.3em;
 }
 
