Changed font colors

--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -9,7 +9,7 @@ $font-weight-heavy: 700;
 $font-height: 1.7;
 // Colors
 $primary: #118AB2;
-$accent: #EF605B;
+$accent: #484848; // Old: EF605B
 $dark-grey: #555;
 $light-grey: #b3b3b3;
 $lighter: #efefef;
