--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -1,12 +1,15 @@
 // Variables
-$font-family: 'Roboto Slab', serif;
-$font-weight-light: 300;
+$body-font: 'Merriweather', sans-serif;
+$heading-font: 'Inter', serif;
+$font-weight-extralight: 100;
+$font-weight-light: 200;
 $font-weight-regular: 400;
 $font-weight-heavy: 700;
 $font-height: 1.7;
 // Colors
-$primary: #118AB2;
-$accent: #EF605B;
+$primary: #555;
+$accent:  #118AB2;
+// $accent: #df5a55;
 $dark-grey: #555;
 $light-grey: #b3b3b3;
 $lighter: #efefef;
