--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,9 @@
 layout: default
 ---
 
-<section class="container">
-        <div class="col-md-5 text-center"><h1 class="accent">{{page.title}}</h1></div>
-        <div class="col-md-7 col-sm-12">{{ content }}</div>
+<section class="container center ">
+  <div class="row ">
+        <div class="col-md-12 col-sm-12 ">
+        {{content}}
+        </div>
 </section>
