--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,15 @@
 layout: default
 ---
 <section class="blog">
-    <div class="container">
-        <div class="row blog">
-            <div class="col-xs-12 col-md-7">
+    <section class="container center ">
+    <div class="row ">
+            <div class="col-md-8 col-sm-12 ">
             <h1>{{ page.title }}</h1>
                 <p class="lighter-heading text-right">{{ page.date | date: "%d %B %Y" }}</p>
                 {{ content }}
             </div>
         </div>
     </div>
+    </div>
+    </section>
 </section>
