--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,39 +1,47 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab:300,400");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;600&family=Merriweather:wght@300&display=swap');
 
-h1,
-h2,
-h3,
-h4 {
-    font-weight: 700;
-    line-height: 1.2;
-    margin: 1.2em 0 0.5em;
-    color: $primary;
+h1, h2, h3, h4{
+  font-family: $heading-font;
+  color: $primary;
+  font-weight: $font-weight-light;
+  line-height: 1; 
+}
+
+
+h2, h3, h4{
+  font-weight: $font-weight-heavy;
+}
+
+p, a, code {
+  font-family: $body-font;
+  font-weight: $font-weight-regular;  
 }
 
 h1 {
   margin-top: 0;
-  font-size: 2.441em;
+  font-size: 22px;
   @media screen and (min-width: 990px){
     margin-top: 1.42rem;
   }
 }
 
-h2 {font-size: 1.953em;}
+h2 {font-size: 1.753em;}
 
-h3 {font-size: 1.563em;}
+h3 {font-size: 1.463em;}
 
-h4 {font-size: 1.25em;}
+h4 {font-size: 1.25em;
+}
 
 p {margin-bottom: 1.3em;}
 
 a:hover, a:active, a:focus{
   text-decoration: none;
-  font-weight: 400;
+  font-weight: $font-weight-regular;
   color: $primary;
 }
 
 code {
-    font-family: "Roboto Mono", monospace;
+    font-family: monospace;
     margin-bottom: 1.3em;
 }
 
@@ -53,11 +61,20 @@ blockquote {
   }
 }
 .lighter-heading{
-  color: $light-grey;
-  font-weight: 300;
-  margin: -10px 0;
+  color: $primary;
+  font-weight: 200;
 }
 
+.subtitle{
+  color: $light-grey;
+  font-weight: 200;
+  margin-top: -5px;
+}
+
+
 #contact{
-  font-weight: 600;
+  font-weight: 800;
+}
+.bold{
+  font-weight: 500;
 }
