--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container-fluid footer">
         <div class="row">
             <div class="col-xs-12">
-                <p>Alessandra Gherardelli © 2022</p>
+                <p>{{ site.author.name }} © {{ 'now' | date: "%Y" }}</p>
 
             </div>
         </div>
