--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -51,7 +51,10 @@ section{
     background: $lighter;
     color: $dark-grey;
     display: flex;
+    	position: fixed;
+	bottom: 0;
     margin-top: 1rem;
+
 }
 
 .footer .row {
