--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <a class="navbar-brand" href="/">
-                    <img alt="AG" src="{{ site.baseurl }}/assets/icons/AG.png">
+                    <img alt="" src="{{ site.baseurl }}/assets/icons/AG.png">
                 </a>
 
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -18,8 +18,8 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/" {% if page.url=="/" %}class="active no-decoration" {% endif %}> Home</a></li>
-                    <!-- <li><a href="/projects/" {% if page.url=="/projects/" %}class="active no-decoration" {% endif %}>Projects</a></li> -->
-                    <!-- <li><a href="/articles/" {% if page.url == "/articles/" %}class="active no-decoration"{% endif %}>Articles</a></li> -->
+                    <li><a href="/projects/" {% if page.url=="/projects/" %}class="active no-decoration" {% endif %}>Projects</a></li>
+                    <li><a href="/articles/" {% if page.url == "/articles/" %}class="active no-decoration"{% endif %}>Articles</a></li>
                     <li><a href="/contacts/" {% if page.url=="/contacts/" %}class="active no-decoration" {% endif %}>Contacts</a></li>
 
                 </ul>
