Aligned project and post layout

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,14 @@ layout: default
 <section class="container center ">
   <div class="row ">
         <div class="col-md-12 col-sm-12 ">
+          <section class="container ">
+  <div class="row center">
+    <div class="col-md-8 col-sm-12 ">
         {{content}}
         </div>
+            </div>
+
+  </div>
+</section>
+
 </section>
