--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -6,6 +6,7 @@ $font-weight-light: 200;
 $font-weight-regular: 400;
 $font-weight-heavy: 700;
 $font-height: 1.7;
+$font-subscript: 12px;
 // Colors
 $primary: #555;
 $accent:  #118AB2;
