--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,3 +1,4 @@
+// GENERAL
 * {
   color: $dark-grey;
   font-family: $body-font;
@@ -38,13 +39,17 @@ section{
     display: flex;
     justify-content: center;
 }
-.blog-title{
-  margin-bottom: 10px;
+
+// BLOG
+.blog-post{
+  margin-top: 25px;
 }
 .paginator{
   margin: 15% auto;
 }
 
+
+//  FOOTER
 .footer {
     width: 100%;
     text-align: center;
@@ -61,6 +66,9 @@ section{
     margin: auto;
     padding: 20px 0;
 }
+
+
+// 404 PAGE
 .fourohfour{
   min-height: 100%;
   background: url("../assets/images/alpaca.png") no-repeat center center fixed; 
