--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -3,14 +3,10 @@
 h1, h2, h3, h4{
   font-family: $heading-font;
   color: $primary;
-  font-weight: $font-weight-light;
+  font-weight: $font-weight-heavy;
   line-height: 1; 
 }
 
-
-h2, h3, h4{
-  font-weight: $font-weight-heavy;
-}
 
 p, a, code {
   font-family: $body-font;
@@ -19,7 +15,7 @@ p, a, code {
 
 h1 {
   margin-top: 0;
-  font-size: 22px;
+  font-size: 2.4em;
   @media screen and (min-width: 990px){
     margin-top: 1.42rem;
   }
@@ -53,22 +49,19 @@ blockquote {
 .accent{
   color: $accent;
 }
+
 .larger-heading{
+  font-weight: $font-weight-light;
   font-size: 3.157em;
   margin-top: 0;
   @media only screen and (max-width: 500px){
     font-size: 3em;
   }
 }
-.lighter-heading{
-  color: $primary;
-  font-weight: 200;
-}
 
-.subtitle{
-  color: $light-grey;
-  font-weight: 200;
-  margin-top: -5px;
+.lighter-heading{
+  font-weight: $font-weight-light;
+  color: $primary;
 }
 
 
@@ -78,3 +71,20 @@ blockquote {
 .bold{
   font-weight: 500;
 }
+
+.post_title{
+  margin: 5px 0;
+}
+
+.post_subtitle{
+  color: $light-grey;
+  font-weight: 200;
+  margin-top: 2px;
+}
+
+.post_date{
+  margin-bottom: 0px;
+  font-size: $font-subscript;
+  text-transform: uppercase;
+}
+
