--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/" {% if page.url=="/" %}class="active no-decoration" {% endif %}> Home</a></li>
-                    <li><a href="/projects/" {% if page.url=="/projects/" %}class="active no-decoration" {% endif %}>Projects</a></li>
+                    <!-- <li><a href="/projects/" {% if page.url=="/projects/" %}class="active no-decoration" {% endif %}>Projects</a></li> -->
                     <li><a href="/articles/" {% if page.url == "/articles/" %}class="active no-decoration"{% endif %}>Articles</a></li>
                     <li><a href="/contacts/" {% if page.url=="/contacts/" %}class="active no-decoration" {% endif %}>Contacts</a></li>
 
