--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -19,11 +19,16 @@ body {
   top: 0;
   min-width: 100%;
 }
+
+
 section{
   width: 100%;
-  min-height: calc(100vh - 70px);
-  margin: 0 10px;
+  margin: 0 10px 0 -90px;
+  height: 100%;
+  display: block;
 }
+
+
 .main{
   min-height: 70%;
   display: flex;
@@ -56,6 +61,7 @@ section{
     background: $lighter;
     color: $dark-grey;
     display: flex;
+    height: 90px;
     	position: fixed;
 	bottom: 0;
     margin-top: 1rem;
