--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,5 @@
----
-# Front Matter
----
-@import "_helpers"; // contains variables and mixins
-@import "_typography"; // contains all typography rules
-@import "_layout"; // contains layout things
-@import "_components"; // contains navigation, buttons, logos, forms, images and other components
-@import "_media"; // contains media queries
+@use "helpers";
+@use "typography";
+@use "layout";
+@use "components";
+@use "media";
